force-app/main/default/objects/StageTracker__c/StageTracker__c.object-meta.xml
<CustomObject>
    <description>Used to hold Stage/Status duration information for the Lead/Case/Opportunity object</description>
    <label>Stage Tracker</label>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stages Tracked</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>