force-app/main/default/objects/StageTracker__c/fields/Average_Time__c.field-meta.xml
<CustomField>
    <fullName>Average_Time__c</fullName>
    <description>The Average time spent in this stage/status</description>
    <formula>Total_Time__c /  Times_Moved_To__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>