force-app/main/default/objects/StageTracker__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Case this Stage Tracker is Related to</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Status Changes Tracked</relationshipLabel>
    <relationshipName>Stages_Tracked</relationshipName>
    <type>Lookup</type>
</CustomField>