force-app/main/default/objects/StageTracker__c/fields/Cumulated_Days__c.field-meta.xml
<CustomField>
    <fullName>Cumulated_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number field used to store the days cumulated for this field/object combo. This field is needed for when a stage/status field get switched forward and then backwards to the same stage. This field keeps the previous total time and adds it into the formula for total time in stage</description>
    <inlineHelpText>In Days</inlineHelpText>
    <label>Cumulated Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>