force-app/main/default/objects/StageTracker__c/fields/Inactive_Date__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Date__c</fullName>
    <description>The date when this field/object combo stopped being active. Note if this field is null the end date is calculated as NOW()</description>
    <label>Inactive Date</label>
    <type>DateTime</type>
</CustomField>