force-app/main/default/objects/StageTracker__c/fields/Last_Active_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Active_Date__c</fullName>
    <defaultValue>Now()</defaultValue>
    <description>The date this field was switched active for this field/object combo</description>
    <label>Last Active Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>