force-app/main/default/objects/StageTracker__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Lead this Stage Tracker is Related to</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Status Changes Tracked</relationshipLabel>
    <relationshipName>Stages_Tracked</relationshipName>
    <type>Lookup</type>
</CustomField>