force-app/main/default/objects/StageTracker__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Opportunity this Stage Tracker is Related to</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Stage Changes Tracked</relationshipLabel>
    <relationshipName>Stages_Tracked</relationshipName>
    <type>Lookup</type>
</CustomField>