force-app/main/default/objects/StageTracker__c/fields/Times_Moved_Out__c.field-meta.xml
<CustomField>
    <fullName>Times_Moved_Out__c</fullName>
    <description>The Number of times this stage has been switched to another stage</description>
    <label>Times Moved Out</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>