force-app/main/default/objects/StageTracker__c/fields/Times_Moved_To__c.field-meta.xml
<CustomField>
    <fullName>Times_Moved_To__c</fullName>
    <defaultValue>1</defaultValue>
    <description>The number of times this stage has been selected</description>
    <label>Times Moved To</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>