force-app/main/default/objects/StageTracker__c/fields/Total_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Time__c</fullName>
    <description>Calculate the total time in current stage/status. Uses cumulated days which is calculated by the system and if the end date is null this means the field is still the selected value so the time is on going. If the end date is set this means the field is no longer selected and the total time has been capped</description>
    <formula>Cumulated_Days__c + If(Isblank(Inactive_Date__c), Now() - Last_Active_Date__c, Inactive_Date__c - Last_Active_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total time in Status/Stage</inlineHelpText>
    <label>Total Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>