force-app/main/default/objects/StageTracker__c/recordTypes/Case.recordType-meta.xml
<RecordType>
    <fullName>Case</fullName>
    <active>true</active>
    <description>Case Status Tracker</description>
    <label>Case</label>
</RecordType>