force-app/main/default/objects/StageTracker__c/recordTypes/Lead.recordType-meta.xml
<RecordType>
    <fullName>Lead</fullName>
    <active>true</active>
    <description>Lead Status Tracker</description>
    <label>Lead</label>
</RecordType>