force-app/main/default/objects/StageTracker__c/recordTypes/Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Opportunity</fullName>
    <active>true</active>
    <description>Opportunity Stage Tracker</description>
    <label>Opportunity</label>
</RecordType>