force-app/main/default/objects/StageTracker__c/validationRules/Case_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Required</fullName>
    <active>true</active>
    <description>Case is required for Case Record Type</description>
    <errorConditionFormula>AND(
 RecordType.DeveloperName = &apos;Case&apos;,
 ISBLANK(Case__c)
)</errorConditionFormula>
    <errorDisplayField>Case__c</errorDisplayField>
    <errorMessage>Case is required for Status Tracker</errorMessage>
</ValidationRule>