force-app/main/default/objects/StageTracker__c/validationRules/Lead_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Required</fullName>
    <active>true</active>
    <description>Lead is required for a lead Record Type</description>
    <errorConditionFormula>AND(
  RecordType.DeveloperName = &apos;Lead&apos;,
  ISBLANK(Lead__c)
)</errorConditionFormula>
    <errorDisplayField>Lead__c</errorDisplayField>
    <errorMessage>Lead is Required to track lead status changes</errorMessage>
</ValidationRule>