force-app/main/default/objects/StageTracker__c/validationRules/Opportunity_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Required</fullName>
    <active>true</active>
    <description>Opportunity Required for Opportunity Record Type</description>
    <errorConditionFormula>AND(
 RecordType.DeveloperName = &apos;Opportunity&apos;,
 ISBLANK( Opportunity__c )
)</errorConditionFormula>
    <errorDisplayField>Opportunity__c</errorDisplayField>
    <errorMessage>An Opportunity is Required to Capture the Stage</errorMessage>
</ValidationRule>